--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Poke-Finder</title>
+		<link rel="stylesheet" href="shared.css">
 	</head>
-	<body>
-		<header></header>
-		<main></main>
+	<body class="flex flex-justify-center">
+		<header>
+			<div class="background-color-4ecdc4 text-align-center">
+				<h1>POKÉMON FINDER</h1>
+			</div>
+			
+			<div>
+				<button class="border-color-2d2d2 padding-0-5rem border-width-4px border-estyle shadow-box-x6px-y6px-b0px-s0px-2d2d2d">🔍 Buscar</button>
+				<button class="border-color-2d2d2 padding-0-5rem border-width-4px border-estyle shadow-box-x6px-y6px-b0px-s0px-2d2d2d">🏛️ Histórico</button>
+				<button class="border-color-2d2d2 padding-0-5rem border-width-4px border-estyle shadow-box-x6px-y6px-b0px-s0px-2d2d2d">⚔️ VS</button>
+				<button class="border-color-2d2d2 padding-0-5rem border-width-4px border-estyle shadow-box-x6px-y6px-b0px-s0px-2d2d2d">❤️ Favoritos</button>
+			</div>
+
+			<div class="flex flex-justify-space-between">
+				<select name="" id=""></select>
+				<input type="search" name="" id="" placeholder="NOMBRE O ID...">
+				<button>Buscar</button>
+			</div>
+		</header>
+		
+		<main class="flex flex-column">
+
+		</main>
+
 		<footer></footer>
+		<script type="" src="shared.js"></script>
 	</body>
 </html>
