fix(css, poke ball)

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<title>Poke-Finder</title>
 		<link rel="stylesheet" href="shared.css">
 	</head>
-	<body class="position-bg flex flex-justify-center">
-		<div class="position-bg">
-			<div class="transform-rotate--15deg overflow-hidden background-linear-gradiant-poke-ball flex flex-justify-center flex-align-center border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid">
-				<div class="background-color-FCFCFC padding-3rem border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid">
+	<body class="flex flex-justify-center">
+		<div class="position-bg pointer-events-none">
+			<div class="pointer-events-none transform-rotate--15deg overflow-hidden background-linear-gradiant-poke-ball flex flex-justify-center flex-align-center border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid">
+				<div class="pointer-events-none background-color-FCFCFC padding-3rem border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid">
 
 				</div>
 			</div>
 		</div>
 
-		<header class="background-transparent flex flex-column flex-gap-0-5rem">
+		<header class="z-index-2 background-transparent flex flex-column flex-gap-0-5rem">
 			<div class="transform-rotate--3deg margin-y-0-75rem padding-y-0-75rem background-color-4ecdc4 text-align-center border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d">
 				<h1>POKÉMON FINDER</h1>
 			</div>
