--- a/index.html
+++ b/index.html
@@ -6,58 +6,104 @@
 		<title>Poke-Finder</title>
 		<link rel="stylesheet" href="shared.css" />
 	</head>
-	<body class="flex flex-justify-center">
+	<body class="flex flex-column margin-y-0-75rem">
+
 		<div class="position-bg pointer-events-none">
 			<div
-				class="pointer-events-none transform-rotate--15deg overflow-hidden background-linear-gradiant-poke-ball flex flex-justify-center flex-align-center border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
+				class="
+				shadow-box-x6px-y6px-b0px-s0px-rgba45-45-45-0-5
+				background-color-rgba45-45-45-0-5 
+				pointer-events-none 
+				transform-rotate--15deg 
+				overflow-hidden 
+				background-linear-gradiant-poke-ball 
+				flex 
+				flex-justify-center 
+				flex-align-center 
+				border-radius-circle 
+				border-color-2d2d2d 
+				border-width-20px
+				border-estyle-solid
+				"
 			>
 				<div
-					class="pointer-events-none background-color-FCFCFC padding-3rem border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
+					class="
+					background-color-FCFCFC 
+					padding-3rem border-radius-circle 
+					border-color-2d2d2d 
+					border-width-20px 
+					border-estyle-solid
+					"
 				></div>
 			</div>
 		</div>
 
-		<header
-			class="z-index-2 background-transparent flex flex-column flex-gap-0-5rem margin-x-0-49rem"
+		<div class="z-index-2">
+			<header
+			class="
+			z-index-2 
+			background-transparent 
+			margin-x-0-49rem
+			flex 
+			flex-column 
+			flex-gap-0-5rem
+			"
 		>
 			<div
-				class="font-size-1-25rem transform-rotate--3deg margin-y-0-75rem padding-y-0-75rem background-color-4ecdc4 text-align-center border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
-			>
+				class="
+				shadow-box-x6px-y6px-b0px-s0px-2d2d2d 
+				font-size-1-25rem 
+				transform-rotate--3deg 
+				margin-y-0-75rem 
+				padding-y-0-75rem 
+				background-color-4ecdc4 
+				text-align-center 
+				border-width-4px 
+				border-estyle-solid 
+				">
 				<h1>POKÉMON FINDER</h1>
 			</div>
 
 			<form action="" class="flex flex-gap-0-5rem flex-column">
-				<div class="flex flex-gap-0-5rem">
+				<div class="flex flex-gap-0-5rem ">
 					<button
-						class="background-color-4ecdc4 font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+						class="anim-popup background-color-4ecdc4 font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
 						🔍 Buscar
 					</button>
 
 					<button
-						class="font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+						class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
-						🏛️ Histórico
+						📜 Histórico
 					</button>
 
 					<button
-						class="font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+						class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
 						⚔️ VS
 					</button>
 
 					<button
-						class="font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+						class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
 						❤️ Favoritos
 					</button>
 				</div>
 
-				<div class="flex flex-justify-space-between">
+				<div class="flex flex-justify-space-betwee">
 					<select
 						name=""
 						id=""
-						class="font-size-0-9rem padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+						class="
+						anim-popup
+						font-size-0-9rem 
+						padding-0-5rem 
+						border-color-2d2d2d 
+						border-width-4px 
+						border-estyle-solid 
+						shadow-box-x6px-y6px-b0px-s0px-2d2d2d
+						"
 					>
 						<option value="Pokémon">Pokémon</option>
 					</select>
@@ -66,10 +112,26 @@
 						name=""
 						id=""
 						placeholder="NOMBRE O ID..."
-						class="font-size-0-9rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+						class="
+						anim-active-popup
+						font-size-0-9rem 
+						padding-0-5rem  
+						border-color-2d2d2d 
+						border-width-4px 
+						border-estyle-solid 
+						shadow-box-x6px-y6px-b0px-s0px-2d2d2d
+						"
 					/>
 					<button
-						class="font-size-0-9rem padding-0-5rem border-width-4px border-color-2d2d2d border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+						class="
+						anim-popup
+						font-size-0-9rem 
+						padding-0-5rem 
+						border-width-4px 
+						border-color-2d2d2d 
+						border-estyle-solid 
+						shadow-box-x6px-y6px-b0px-s0px-2d2d2d
+						"
 					>
 						Buscar
 					</button>
@@ -77,9 +139,50 @@
 			</form>
 		</header>
 
-		<main class="flex flex-column"></main>
+			<main class="flex flex-column background-color-4ecdc4">
+				<div class="">
+					<div>
+						<p>Pokemon Data</p>
+						<p>Pokemon Data</p>
+					</div>
 
-		<footer></footer>
+					<div>
+						<div class="background-linear-gradient width-1rem">
+							<img src="" alt="">
+						</div>
+					</div>
+
+					<div>
+						<p>Text</p>
+						<hr>
+					</div>
+
+					<div>
+
+					</div>
+
+					<div>
+
+					</div>
+
+					<div>
+
+					</div>
+
+					<div>
+
+
+					</div>
+
+					<div></div>
+				</div>
+			</main>
+		</div>
+		
+
+		<footer>
+
+		</footer>
 		<script type="" src="shared.js"></script>
 	</body>
 </html>
