# Add - Pokemones estadisticas
# Fix
- css

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 		<header
 			data-name="header"
-			class="z-index-2 background-transparent margin-x-0-49rem flex flex-column flex-gap-0-5rem"
+			class="z-index-2 background-transparent margin-x-0-49rem flex flex-align-center flex-column flex-gap-0-5rem"
 		>
 			<div
 				data-name="container-poke-title"
-				class="shadow-box-x6px-y6px-b0px-s0px-2d2d2d font-size-1-25rem transform-rotate--3deg margin-y-0-75rem padding-y-0-75rem background-color-4ecdc4 text-align-center border-width-4px border-estyle-solid"
+				class="shadow-box-x6px-y6px-b0px-s0px-2d2d2d font-size-1-25rem transform-rotate--3deg margin-y-0-75rem padding-x-1rem padding-y-0-75rem background-color-4ecdc4 text-align-center border-width-4px border-estyle-solid"
 			>
 				<h1 data-name="poke-title">POKÉMON FINDER</h1>
 			</div>
@@ -69,11 +69,11 @@
 					</button>
 				</div>
 
-				<div class="flex flex-justify-space-betwee">
+				<div class="flex flex-justify-space-between">
 					<select
 						name=""
 						id=""
-						class="anim-popup font-size-0-9rem padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+						class="background-color-ffcc00 anim-popup font-size-0-9rem padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
 					>
 						<option value="Pokémon">Pokémon</option>
 					</select>
@@ -86,7 +86,7 @@
 					<button
 						data-name="finder-buscar"
 						type="submit"
-						class="anim-popup font-size-0-9rem padding-0-5rem border-width-4px border-color-2d2d2d border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+						class="background-color-ff6b6b  anim-popup font-size-0-9rem padding-0-5rem border-width-4px border-color-2d2d2d border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
 					>
 						Buscar
 					</button>
