feat(pokemon): unificar mejoras de dev/juan (e15ea137) y tuz (e01f981)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <button
             data-name="finder-buscar"
             type="submit"
-            class="background-color-ff6b6b anim-popup font-size-0- 9rem padding-0-5rem border-width-4px border-color-2d2d2d border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+            class="background-color-ff6b6b anim-popup font-size-0-9rem padding-0-5rem border-width-4px border-color-2d2d2d border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
           >
             Buscar
           </button>
