--- a/favoritos.html
+++ b/favoritos.html
@@ -27,7 +27,7 @@
         data-name="container-poke-title"
         class="shadow-box-x6px-y6px-b0px-s0px-2d2d2d font-size-1-25rem transform-rotate--3deg margin-y-0-75rem padding-x-1rem padding-y-0-75rem background-color-4ecdc4 text-align-center border-width-4px border-estyle-solid"
       >
-        <h1 data-name="poke-title">📜Histórico</h1>
+        <h1 data-name="poke-title">❤️ Favoritos</h1>
       </div>
 
       <form
@@ -47,7 +47,7 @@
           <button
             data-name="nav-historico"
             type="submit"
-            class="anim-popup background-color-4ecdc4 font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+            class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
           >
             📜 Histórico
           </button>
@@ -63,7 +63,7 @@
           <button
             data-name="nav-favoritos"
             type="submit"
-            class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+            class="anim-popup background-color-4ecdc4 font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
           >
             ❤️ Favoritos
           </button>
@@ -73,11 +73,11 @@
 
     <main data-name="main" class="z-index-2 flex flex-column flex-align-center">
       <div>
-        <div id="history-list" class="flex flex-column flex-gap-1rem"></div>
+        <div id="favorites-list" class="flex flex-column flex-gap-1rem"></div>
 
         <div class="flex flex-justify-center">
           <button
-            id="clear-history-btn"
+            id="clear-favorites-btn"
             type="button"
             class="flex-content-center font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid background-color-ff6b6b"
           >
