--- a/index.html
+++ b/index.html
@@ -67,15 +67,23 @@
           >
             ❤️ Favoritos
           </button>
+            <button
+              data-name="theme"
+              type="submit"
+              class="anim-popup shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+            >
+              ☀️
+            </button>
         </div>
 
-        <div class="flex flex-justify-space-between">
+        <div class="flex flex-justify-center flex-gap-0-5rem">
           <select
             name=""
             id=""
             class="background-color-ffcc00 anim-popup font-size-0-9rem padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
           >
-            <option value="Pokémon">Pokémon</option>
+            <option value="Pokemon">👾 Pokémon</option>
+            <option value="Habilidad">⚡ Habilidad</option>
           </select>
           <input
             data-name="finder-search"
