--- a/historico.html
+++ b/historico.html
@@ -67,6 +67,13 @@
 					>
 						❤️ Favoritos
 					</button>
+					<button
+					data-name="theme"
+					type="submit"
+					class="anim-popup shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+					>
+					☀️
+					</button>
 				</div>
 			</form>
 		</header>
