fix(search bug)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="flex flex-justify-center flex-gap-0-5rem">
           <select
-            name=""
+            data-name="finder-select"
             id=""
             class="background-color-ffcc00 anim-popup font-size-0-9rem padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
           >
