--- a/index.html
+++ b/index.html
@@ -1,13 +1,114 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Poke-Finder</title>
-	</head>
-	<body>
-		<header></header>
-		<main></main>
-		<footer></footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Poke-Finder</title>
+    <link rel="stylesheet" href="shared.css" />
+  </head>
+  <body class="flex flex-column margin-y-0-75rem flex-gap-1rem">
+    <div data-name="bg-pokeball" class="position-bg pointer-events-none">
+      <div
+        data-name="pokeball"
+        class="shadow-box-x6px-y6px-b0px-s0px-rgba45-45-45-0-5 background-color-rgba45-45-45-0-5 pointer-events-none transform-rotate--15deg overflow-hidden background-linear-gradiant-poke-ball flex flex-justify-center flex-align-center border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
+      >
+        <div
+          data-name="pokeball-ball"
+          class="background-color-FCFCFC padding-3rem border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
+        ></div>
+      </div>
+    </div>
+
+    <header
+      data-name="header"
+      class="z-index-2 background-transparent margin-x-0-49rem flex flex-align-center flex-column flex-gap-0-5rem"
+    >
+      <div
+        data-name="container-poke-title"
+        class="shadow-box-x6px-y6px-b0px-s0px-2d2d2d font-size-1-25rem transform-rotate--3deg margin-y-0-75rem padding-x-1rem padding-y-0-75rem background-color-4ecdc4 text-align-center border-width-4px border-estyle-solid"
+      >
+        <h1 data-name="poke-title">POKÉMON FINDER</h1>
+      </div>
+
+      <form
+        data-name="form-main"
+        action=""
+        class="flex flex-gap-0-5rem flex-column"
+      >
+        <div class="flex flex-gap-0-5rem">
+          <button
+            data-name="nav-buscar"
+            type="submit"
+            class="anim-popup background-color-4ecdc4 font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+          >
+            🔍 Buscar
+          </button>
+
+          <button
+            data-name="nav-historico"
+            type="submit"
+            class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+          >
+            📜 Histórico
+          </button>
+
+          <button
+            data-name="nav-vs"
+            type="submit"
+            class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+          >
+            ⚔️ VS
+          </button>
+
+          <button
+            data-name="nav-favoritos"
+            type="submit"
+            class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+          >
+            ❤️ Favoritos
+          </button>
+            <button
+              data-name="theme"
+              type="submit"
+              class="anim-popup shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+            >
+              ☀️
+            </button>
+        </div>
+
+        <div class="flex flex-justify-center flex-gap-0-5rem">
+          <select
+            data-name="finder-select"
+            id=""
+            class="background-color-ffcc00 anim-popup font-size-0-9rem padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+          >
+            <option value="Pokemon">👾 Pokémon</option>
+            <option value="Habilidad">⚡ Habilidad</option>
+          </select>
+          <input
+            data-name="finder-search"
+            type="search"
+            placeholder="NOMBRE O ID..."
+            class="anim-active-popup font-size-0-9rem padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+          />
+          <button
+            data-name="finder-buscar"
+            type="submit"
+            class="background-color-ff6b6b anim-popup font-size-0-9rem padding-0-5rem border-width-4px border-color-2d2d2d border-estyle-solid shadow-box-x6px-y6px-b0px-s0px-2d2d2d"
+          >
+            Buscar
+          </button>
+        </div>
+      </form>
+    </header>
+
+    <main
+      data-name="main"
+      class="z-index-2 flex flex-column flex-align-center"
+    ></main>
+
+    <footer></footer>
+
+    <script type="" src="shared.js"></script>
+  </body>
 </html>
