--- a/vs.html
+++ b/vs.html
@@ -3,21 +3,39 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Poke-Finder</title>
+
+        <title>Poke-Finder</title>
+
+        <link rel="icon" href="./favicon.ico?v=2">
+        <link rel="icon" type="image/png" href="./favicon.png?v=2">
+
 		<link rel="stylesheet" href="shared.css" />
+		<script>
+        	const localTheme = localStorage.getItem("theme") || "light";
+			document.documentElement.dataset.theme = localTheme;
+    	</script>
 	</head>
 	<body class="flex flex-column margin-y-0-75rem flex-gap-1rem">
-		<div data-name="bg-pokeball" class="position-bg pointer-events-none">
-			<div
-				data-name="pokeball"
-				class="shadow-box-x6px-y6px-b0px-s0px-rgba45-45-45-0-5 background-color-rgba45-45-45-0-5 pointer-events-none transform-rotate--15deg overflow-hidden background-linear-gradiant-poke-ball flex flex-justify-center flex-align-center border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
-			>
-				<div
-					data-name="pokeball-ball"
-					class="background-color-FCFCFC padding-3rem border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
-				></div>
-			</div>
-		</div>
+    
+        <audio style="display: none;" id="audio" src=""></audio>
+    
+        <div data-name="bg-pokeball" class="position-bg pointer-events-none">
+        <div
+            data-name="pokeball"
+            class="shadow-box-x6px-y6px-b0px-s0px-rgba45-45-45-0-5 tmp-poke-mod pointer-events-none  transform-rotate--15deg  overflow-hidden  background-linear-gradiant-poke-ball  flex  flex-justify-center  flex-align-center  border-radius-circle  border-color-2d2d2d  border-width-20px  border-estyle-solid "
+        >
+            <div
+            data-name="pokeball-ball"
+            class="
+            background-color-FCFCFC 
+            padding-3rem 
+            border-radius-circle 
+            border-color-2d2d2d 
+            border-width-20px 
+            border-estyle-solid"
+            ></div>
+        </div>
+        </div>
 
 		<header
 			data-name="header"
