--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="flex flex-column margin-y-0-75rem flex-gap-1rem">
     <audio style="display: none;" id="audio" src=""></audio>
-    
+
     <div data-name="bg-pokeball" class="position-bg pointer-events-none">
       <div
         data-name="pokeball"
@@ -131,7 +131,7 @@
       </form>
     </header>
 
-    <div class="cargando display-hidden cargar z-index-2 font-size-5-25rem font-weight-900 font-size-3rem flex flex-justify-center flex-align-center"><span id="cargando-span" class="cargando display-hidden">CARGANDO DATOS...</span></div>
+    <div class="anim-blink cargando display-hidden cargar z-index-2 font-size-5-25rem font-weight-900 font-size-3rem flex flex-justify-center flex-align-center"><span id="cargando-span" class="cargando display-hidden">CARGANDO DATOS...</span></div>
 
     <main
       data-name="main"
