--- a/historico.html
+++ b/historico.html
@@ -3,40 +3,32 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		
+
 		<title>Poke-Finder</title>
 
-		<link rel="icon" href="./favicon.ico?v=2">
-    	<link rel="icon" type="image/png" href="./favicon.png?v=2">
-		
+		<link rel="icon" href="./favicon.ico?v=2" />
+		<link rel="icon" type="image/png" href="./favicon.png?v=2" />
+
 		<link rel="stylesheet" href="shared.css" />
 
 		<script>
 			const localTheme = localStorage.getItem("theme") || "light";
 			document.documentElement.dataset.theme = localTheme;
 		</script>
-
 	</head>
 	<body class="flex flex-column margin-y-0-75rem flex-gap-1rem">
-		
-		<audio style="display: none;" id="audio" src=""></audio>
-		
+		<audio style="display: none" id="audio" src=""></audio>
+
 		<div data-name="bg-pokeball" class="position-bg pointer-events-none">
-		<div
-			data-name="pokeball"
-			class="shadow-box-x6px-y6px-b0px-s0px-rgba45-45-45-0-5 tmp-poke-mod pointer-events-none  transform-rotate--15deg  overflow-hidden  background-linear-gradiant-poke-ball  flex  flex-justify-center  flex-align-center  border-radius-circle  border-color-2d2d2d  border-width-20px  border-estyle-solid "
-		>
 			<div
-			data-name="pokeball-ball"
-			class="
-			background-color-FCFCFC 
-			padding-3rem 
-			border-radius-circle 
-			border-color-2d2d2d 
-			border-width-20px 
-			border-estyle-solid"
-			></div>
-		</div>
+				data-name="pokeball"
+				class="shadow-box-x6px-y6px-b0px-s0px-rgba45-45-45-0-5 tmp-poke-mod pointer-events-none transform-rotate--15deg overflow-hidden background-linear-gradiant-poke-ball flex flex-justify-center flex-align-center border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
+			>
+				<div
+					data-name="pokeball-ball"
+					class="background-color-FCFCFC padding-3rem border-radius-circle border-color-2d2d2d border-width-20px border-estyle-solid"
+				></div>
+			</div>
 		</div>
 
 		<header
@@ -59,6 +51,10 @@
 					<button
 						data-name="nav-buscar"
 						type="submit"
+						style="
+							font-family: Courier New, monospace;
+							font-weight: bold;
+						"
 						class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
 						🔍 Buscar
@@ -67,6 +63,10 @@
 					<button
 						data-name="nav-historico"
 						type="submit"
+						style="
+							font-family: Courier New, monospace;
+							font-weight: bold;
+						"
 						class="anim-popup background-color-4ecdc4 font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
 						📜 Histórico
@@ -75,6 +75,10 @@
 					<button
 						data-name="nav-vs"
 						type="submit"
+						style="
+							font-family: Courier New, monospace;
+							font-weight: bold;
+						"
 						class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
 						⚔️ VS
@@ -83,16 +87,24 @@
 					<button
 						data-name="nav-favoritos"
 						type="submit"
+						style="
+							font-family: Courier New, monospace;
+							font-weight: bold;
+						"
 						class="anim-popup font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
 						❤️ Favoritos
 					</button>
 					<button
-					data-name="theme"
-					type="submit"
-					class="anim-popup shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
+						data-name="theme"
+						type="submit"
+						style="
+							font-family: Courier New, monospace;
+							font-weight: bold;
+						"
+						class="anim-popup shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid"
 					>
-					☀️
+						☀️
 					</button>
 				</div>
 			</form>
@@ -112,6 +124,12 @@
 					<button
 						id="clear-history-btn"
 						type="button"
+						style="
+							color: white;
+							font-family: Courier New, monospace;
+							font-weight: bold;
+							background-color: #ed2138;
+						"
 						class="flex-content-center font-size-0-9rem shadow-box-x6px-y6px-b0px-s0px-2d2d2d padding-0-5rem border-color-2d2d2d border-width-4px border-estyle-solid background-color-ff6b6b"
 					>
 						🗑️ Limpiar Todo
